Began to change SRParasites config + re-enabled some DS sounds
Started implementing new parasite spawning mechanics and added much faster spread for the biome and nodes/colonies. Also re-enabled the sword swing and tool equip sounds for DS, along with enabling crit words.

--- a/config/SRParasites.cfg
+++ b/config/SRParasites.cfg
@@ -32,7 +32,7 @@ general {
     B:"Mobs Enabled"=true
 
     # Set to true to allow mobs to ignore sunlight when naturally spawning. [default: false]
-    B:"Mobs Ignore Sun"=false
+    B:"Mobs Ignore Sun"=true
 
     # Number of ticks required for the mobs to spawn. [range: 0 ~ 100, default: 0]
     I:"Mobs ticks required"=0
@@ -2259,7 +2259,7 @@ parasite_properties_pure {
 
 reinforcement_system {
     # If the light level is higher than this, the block will not spread. [range: 0 ~ 15, default: 7]
-    I:"Reinforcement System Block Light Level"=7
+    I:"Reinforcement System Block Light Level"=15
 
     # One in X to spawn a Beckon on the Infested Block Residue (random tick). [range: 0 ~ 2147483640, default: 100000]
     I:"Reinforcement System Block Residue Chance"=100000
@@ -2808,19 +2808,19 @@ world_biome {
     I:"Node 1 Spread Range"=200
 
     # Days needed from a sss to a Node 1. [range: 0 ~ 2147483640, default: 10]
-    I:"Node 1 Time Needed"=10
+    I:"Node 1 Time Needed"=0.1
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 2 [range: 0.0 ~ 100.0, default: 0.6]
     S:"Node 2 Crop Stop"=0.6
 
     # Effect range of a Node 2. [range: 0 ~ 2147483640, default: 1600]
-    I:"Node 2 Effect Range"=1600
+    I:"Node 2 Effect Range"=160
 
     # Spread range of a Node 2. [range: 0 ~ 2147483640, default: 800]
     I:"Node 2 Spread Range"=800
 
     # Days needed from a Node 1 to a Node 2. [range: 0 ~ 2147483640, default: 30]
-    I:"Node 2 Time Needed"=30
+    I:"Node 2 Time Needed"=0.5
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 3 [range: 0.0 ~ 100.0, default: 1.0]
     S:"Node 3 Crop Stop"=1.0
@@ -2832,7 +2832,7 @@ world_biome {
     I:"Node 3 Spread Range"=4000
 
     # Days needed from a Node 2 to a Node 3. [range: 0 ~ 2147483640, default: 60]
-    I:"Node 3 Time Needed"=60
+    I:"Node 3 Time Needed"=1
 
     # List of potion effects that the parasites will spawn with. Ex. "2;minecraft:speed;3"  Where: 
     #  "2" is the required total of node levels, 
@@ -2845,7 +2845,7 @@ world_biome {
      >
 
     # Message sent to all players in the current world when a Node is placed [default: Node]
-    S:"Node Warning Message"=Node
+    S:"Node Warning Message"=The parasitical forces grow stronger...
 
     # Nodes can only be made in these dimensions
     I:"WhiteList Dimensions" <
@@ -2876,10 +2876,10 @@ world_colony {
     I:"Colonies Spread Point"=2
 
     # How much the radius will grow. [range: 1 ~ 10000, default: 20]
-    I:"Colonies Spread Value"=100
+    I:"Colonies Spread Value"=1000
 
     # Message sent to all players in the current world when a Colony is placed [default: Colony]
-    S:"Colonies Warning Message"=Colony
+    S:"Colonies Warning Message"=The parasites grow even stronger!
 
     # Every x points, the colony will grant a bonus of armor. [range: 1.0 ~ 10000.0, default: 0.0]
     S:"Colony Bonus Armor Point"=0.0
