--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -129,7 +129,7 @@ effects {
     B:Footprints=true
 
     # Display random power word on critical hit [default: true]
-    B:"Show Crit Words"=false
+    B:"Show Crit Words"=true
 
     # Show player breath in cold weather and underwater [default: true]
     B:"Show Frost Breath"=false
@@ -359,7 +359,7 @@ sound {
     I:"Stream Buffer Size"=16
 
     # Enable/disable item swing sounds [default: true]
-    B:"Swing Sound"=false
+    B:"Swing Sound"=true
 
     # Enable Sword Equip sound as Tool [default: false]
     B:"Sword Equip as Tool"=false
