Add FancyMenu + WIP main menu, update ElenaiDodge
- Removed smooth scrolling due to incompat with fancymenu
- Changed randompatches config due to incompat with fancymenu

--- a/config/Elenai Dodge 2.cfg
+++ b/config/Elenai Dodge 2.cfg
@@ -35,6 +35,16 @@ general {
 
             # Whether the feather bar will flash when the player attempts to dodge without the required feathers or too high a weight.
             B:"Visual Dodge Failure"=true
+
+            # The X-Offset of the Feather Bar.
+            # Min: -2147483648
+            # Max: 2147483647
+            I:"X Offset"=0
+
+            # The Y-Offset of the Feather Bar.
+            # Min: -2147483648
+            # Max: 2147483647
+            I:"Y Offset"=0
         }
 
     }
@@ -95,7 +105,7 @@ general {
             # Whether to enable 'Half Feathers'. Instead of weight values rounding down, they will instead show as a half feather. These can be used if the 'Cost' value is set to an odd number.
             B:"Half Feathers"=true
 
-            # The amount of ticks required to regenerate half a feather.
+            # The amount of ticks required to regenerate half a feather. Please only change this when you have full feathers.
             # Min: 1
             # Max: 2147483647
             I:"Regeneration Rate"=80
