Disable crit words

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -129,7 +129,7 @@ effects {
     B:Footprints=true
 
     # Display random power word on critical hit [default: true]
-    B:"Show Crit Words"=true
+    B:"Show Crit Words"=false
 
     # Show player breath in cold weather and underwater [default: true]
     B:"Show Frost Breath"=false
