Update mods, menu tweak

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1231,6 +1231,16 @@ oddities {
         # Set this to true to make it so that if a totem is destroyed, the items it holds are destroyed alongside it rather than dropped
         B:"Destroy Lost Items"=false
         B:"Enable Soul Compass"=true
+        B:"Enable Totem of Holding Item"=true
+
+        # Items that should be prevented from being saved by the totem
+        # Format is modid:item[:meta]
+        S:"Holding Blacklist" <
+         >
+
+        # An item that must be in the player inventory for the totem to work. Set to 'none' to disable
+        S:"Saving Item"=quark:totem_of_holding
+        B:"Should Holding Blacklist Be Whitelist"=false
         B:"Spawn Totem on PVP Kill"=false
     }
 
