--- a/config/packupdater.cfg
+++ b/config/packupdater.cfg
@@ -8,16 +8,16 @@
     S:"Mod pack name"=TREPIDATION
 
     # The URL of your mod pack downloads (most likely CurseForge). [default: UNKNOWN]
-    S:"URL to your modpack's CurseForge page"=UNKNOWN
+    S:"URL to your modpack's CurseForge page"=https://www.curseforge.com/minecraft/modpacks/trepidation
 
     # The URL of where your version JSON is located. [default: UNKNOWN]
-    S:"URL to your version JSON"=UNKNOWN
+    S:"URL to your version JSON"=https://github.com/CalaMariGold/TREPIDATION/blob/main/pack_version_number.json
 }
 
 
 "update checker" {
     # This determines whether or not the mod will check for updates. [default: true]
-    B:"Check for updates"=false
+    B:"Check for updates"=true
 }
 
 
