--- a/config/packupdater.cfg
+++ b/config/packupdater.cfg
@@ -11,7 +11,7 @@
     S:"URL to your modpack's CurseForge page"=https://www.curseforge.com/minecraft/modpacks/trepidation
 
     # The URL of where your version JSON is located. [default: UNKNOWN]
-    S:"URL to your version JSON"=https://github.com/CalaMariGold/TREPIDATION/blob/main/pack_version_number.json
+    S:"URL to your version JSON"=https://raw.githubusercontent.com/CalaMariGold/TREPIDATION/master/pack_version_number.json
 }
 
 
