Remove vanilla music from main menu

--- a/ambience_music/ambience.properties
+++ b/ambience_music/ambience.properties
@@ -6,6 +6,7 @@ enabled=true
 ShowUpdateNotifications=false
 
 
+event.mainMenu=(nether)Aftermath_KevinMacLeod
 
 dimension.-1=(nether)Aftermath_KevinMacLeod,(nether)BabaYaga_MONST3R,(nether)DarkWalk_KevinMacLeod,(nether)wecannotdefendyou_COAGMusic,(nether)Youknowwhatineed_COAGMusic
 dimension.5=(erebus)AwkwardMeeting_KevinMacLeod,(erebus)ControlledChaos_KevinMacLeod,(erebus)Dopplerette_KevinMacLeod,(erebus)EchoesOfTime_KevinMacLeod,(erebus)HeartOfTheBeast_KevinMacLeod
