Added Malek's Infinity Gauntlet and tweaked Rough Mobs config.

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -17,12 +17,12 @@ attributes {
     # Attributes: [default: [zombie;generic.maxHealth;1;0.5;/;1], [zombie_pigman;generic.maxHealth;1;0.5;/;1], [zombie_villager;generic.maxHealth;1;0.5;/;1], [husk;generic.maxHealth;1;0.5;/;1], [skeleton;generic.maxHealth;1;0.5], [stray;generic.maxHealth;1;0.5], [wither_skeleton;generic.maxHealth;1;1], [slime;generic.maxHealth;1;0.5], [blaze;generic.maxHealth;1;0.5], [magma_cube;generic.maxHealth;1;0.5], [wither;generic.maxHealth;1;1], [vindication_illager;generic.maxHealth;1;0.5], [evocation_illager;generic.maxHealth;1;1], [zombie;generic.followRange;0;30], [zombie_pigman;generic.followRange;0;30], [zombie_villager;generic.followRange;0;30], [husk;generic.followRange;0;30], [skeleton;generic.followRange;0;30], [stray;generic.followRange;0;30], [wither_skeleton;generic.followRange;0;30], [creeper;generic.followRange;0;30], [spider;generic.followRange;0;30], [slime;generic.followRange;0;30], [witch;generic.followRange;0;30], [blaze;generic.followRange;0;30], [ghast;generic.followRange;0;30], [magma_cube;generic.followRange;0;30], [vindication_illager;generic.followRange;0;30], [evocation_illager;generic.followRange;0;30], [zombie;generic.knockbackResistance;0;0.5], [zombie_pigman;generic.knockbackResistance;0;0.5], [zombie_villager;generic.knockbackResistance;0;0.5], [husk;generic.knockbackResistance;0;0.5], [vindication_illager;generic.knockbackResistance;0;0.5], [creeper;generic.movementSpeed;1;0.5], [slime;generic.movementSpeed;1;0.5], [magma_cube;generic.movementSpeed;1;0.5]]
     S:attributesModifier <
         zombie;generic.maxHealth;1;0.5;/;1
-        zombie_pigman;generic.maxHealth;1;0.5;/;1
+        zombie_pigman;generic.maxHealth;0;-5;/;1
         zombie_villager;generic.maxHealth;1;0.5;/;1
         husk;generic.maxHealth;1;0.5;/;1
         skeleton;generic.maxHealth;1;0.5
         stray;generic.maxHealth;1;0.5
-        wither_skeleton;generic.maxHealth;1;1
+        wither_skeleton;generic.maxHealth;0;-5
         slime;generic.maxHealth;1;0.5
         blaze;generic.maxHealth;1;0.5
         magma_cube;generic.maxHealth;1;0.5
@@ -53,6 +53,10 @@ attributes {
         creeper;generic.movementSpeed;1;0.5
         slime;generic.movementSpeed;1;0.5
         magma_cube;generic.movementSpeed;1;0.5
+        nethercraft:dark_zombie;generic.maxHealth;0;-40;/;0
+        primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10
+        primitivemobs:flame_spewer;generic.maxHealth;0;-10
+        nethercraft:camouflage_spider;generic.maxHealth;0;-20
      >
 }
 
@@ -1176,23 +1180,23 @@ zombiebossequipment {
 zombieequipment {
     # Chance (1 in X per piece) to give a zombie new armor on spawn.
     # Set to 0 to disable new armor. [range: 0 ~ 32767, default: 4]
-    I:_zombieEquipmentArmorChance=4
+    I:_zombieEquipmentArmorChance=6
 
     # Chance (per slot) that the zombie drops the equipped item (1 = 100%, 0 = 0%) [range: 0.0 ~ 1.0, default: 0.085]
-    S:_zombieEquipmentDropChance=0.085
+    S:_zombieEquipmentDropChance=0.5
 
     # Chance (1 in X per item) to enchant newly given items
     # Set to 0 to disable item enchanting [range: 0 ~ 32767, default: 8]
-    I:_zombieEquipmentEnchantChance=8
+    I:_zombieEquipmentEnchantChance=0
 
     # Multiplier for the applied enchantment level with the max. level. The level can still be a bit lower
     # e.g. 0.5 would make sharpness to be at most level 3 (5 x 0.5 = 2.5 and [2.5] = 3) and fire aspect would always be level 1 (2 x 0.5 = 1) [range: 0.0 ~ 1.0, default: 0.5]
-    S:_zombieEquipmentEnchantMultiplier=0.5
+    S:_zombieEquipmentEnchantMultiplier=0
 
     # Chance (1 in X per hand) to give a zombie new weapons on spawn.
     # NOTE: Bosses always spawn with weapons.
     # Set to 0 to disable new weapons [range: 0 ~ 32767, default: 3]
-    I:_zombieEquipmentWeaponChance=3
+    I:_zombieEquipmentWeaponChance=5
 
     # Enchantments which can be applied to armor items [default: [protection;4], [feather_falling;3], [respiration;3], [depth_strider;3], [thorns;2], [projectile_protection;2], [fire_protection;2], [blast_protection;2]]
     S:zombieEquipmentArmorEnchants <
@@ -1208,74 +1212,40 @@ zombieequipment {
 
     # Boots which can be worn by a zombie in their boots slot [default: [leather_boots;3;0], [chainmail_boots;2], [golden_boots;1], [iron_boots;4;-1]]
     S:zombieEquipmentBoots <
-        leather_boots;3;0
-        chainmail_boots;2
-        golden_boots;1
-        iron_boots;4;-1
+        nethercraft:neridium_boots;10
      >
 
     # Chestplates which can be worn by a zombie in their chestplate slot [default: [leather_chestplate;3;0], [chainmail_chestplate;2], [golden_chestplate;1], [iron_chestplate;4;-1]]
     S:zombieEquipmentChestplate <
-        leather_chestplate;3;0
-        chainmail_chestplate;2
-        golden_chestplate;1
-        iron_chestplate;4;-1
+        nethercraft:neridium_chestplate;10
      >
 
     # Helmets which can be worn by a zombie in their helmet slot [default: [leather_helmet;3;0], [chainmail_helmet;2], [golden_helmet;1], [iron_helmet;4;-1]]
     S:zombieEquipmentHelmet <
-        leather_helmet;3;0
-        chainmail_helmet;2
-        golden_helmet;1
-        iron_helmet;4;-1
+        nethercraft:neridium_helmet;10
      >
 
     # Leggings which can be worn by a zombie in their leggings slot [default: [leather_leggings;3;0], [chainmail_leggings;2], [golden_leggings;1], [iron_leggings;4;-1]]
     S:zombieEquipmentLeggings <
-        leather_leggings;3;0
-        chainmail_leggings;2
-        golden_leggings;1
-        iron_leggings;4;-1
+       nethercraft:neridium_leggings;10
      >
 
     # Items which can be wielded by a zombie in their mainhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [iron_axe;3;-1], [iron_sword;3;-1]]
     S:zombieEquipmentMainhand <
-        wooden_axe;3;0
-        wooden_sword;3;0
-        stone_pickaxe;2
-        stone_axe;2
-        stone_sword;2
-        iron_pickaxe;1
-        golden_sword;1
-        golden_axe;1
-        iron_axe;3;-1
-        iron_sword;3;-1
+      nethercraft:glowood_sword;7
+      nethercraft:neridium_sword;3
+      nethercraft:glowood_pickaxe;5
+      nethercraft:neridium_pickaxe;2
      >
 
     # Items which can be wielded by a zombie in their offhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [shield;5], [iron_axe;3;-1], [iron_sword;3;-1]]
     S:zombieEquipmentOffhand <
-        wooden_axe;3;0
-        wooden_sword;3;0
-        stone_pickaxe;2
-        stone_axe;2
-        stone_sword;2
-        iron_pickaxe;1
-        golden_sword;1
-        golden_axe;1
-        shield;5
-        iron_axe;3;-1
-        iron_sword;3;-1
+       
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
     S:zombieEquipmentWeaponEnchants <
-        sharpness;4
-        knockback;2
-        smite;2
-        bane_of_arthropods;2
-        looting;1
-        sweeping;1
-        fire_aspect;5;-1
+     
      >
 }
 
