--- a/config/DiscordRPC.cfg
+++ b/config/DiscordRPC.cfg
@@ -2,7 +2,7 @@
 
 richpresence {
     # First line of Rich Presence
-    S:"Client Name"=TREPIDATION
+    S:"Client Name"=TREPIDATION v0.1.3
 
     # No placeholders supported, Text that shows when you are in the main menu
     S:MainMenu=In Main Menu
