Start up message

--- a/config/concheckrmd.cfg
+++ b/config/concheckrmd.cfg
@@ -62,13 +62,13 @@ general {
 
     "customisable first start message" {
         # A message box that will be displayed when the game is started for the first time. This is useful for displaying intructions.
-        B:"1) Display message box?"=false
+        B:"1) Display message box?"=true
 
         # Will the window show on top of all other windows? Recommended to keep set to True.
         B:"2) Display message box topmost?"=true
 
         # The text that will be displayed in the message box.
-        S:"3) Message Box Text"=Hello Modpack Users! 
+        S:"3) Message Box Text"=Welcome to TREPIDATION. Before you start running, remember that this is a hardcore roguelite modpack. Dying frequently and creating new worlds is normal. Each death will teach you something about TREPIDATIONs gameplay loop. Chocapic13 Shaders are extremely recommended for the best experience. Download here (https://www.curseforge.com/minecraft/customization/chocapic13-shaders), unzip the file, and put the contents in the shaderpacks folder where TREPIDATION is located.
     }
 
     ##########################################################################################################
