Grue spawns in the depths of the End, other tweaks

--- a/config/esm/epicsiegemod.cfg
+++ b/config/esm/epicsiegemod.cfg
@@ -3,6 +3,21 @@
 general {
     # Mobs that are exempt from AI modifications [default: [minecraft:villager_golem]]
     S:"AI Blacklist" <
+        minecraft:villager
+        quark:archaeologist
+        minecraft:bat
+        minecraft:squid
+        mowziesmobs:ferrous_wroughtnaut
+        quark:stoneling
+        primitivemobs:chameleon
+        primitivemobs:grovesprite
+        minecraft:sheep
+        minecraft:pig
+        minecraft:wolf
+        minecraft:cow
+        minecraft:chicken
+        minecraft:parrot
+        grue:entitygrue
         srparasites:sim_bigspider
         srparasites:sim_human
         srparasites:sim_cow
@@ -70,7 +85,7 @@ general {
 
     # The interval in which 'hard' days will occur where mob spawning is increased and lighting is ignored (0 = off, default = 8/full moon) [range: 0 ~ 2147483647, default: 8]
     I:"Hardcore Day Cycle"=0
-    B:"Hide Updates"=false
+    B:"Hide Updates"=true
 
     # Maximum number of attackers per target [range: 0 ~ 128, default: 16]
     I:"Pathing Cap"=20
