--- a/config/grue.cfg
+++ b/config/grue.cfg
@@ -17,7 +17,7 @@ general {
     B:"Dimensional Grace Period"=false
 
     # Toggles whether or not to display the warning text when in dark areas. [CLIENT ONLY]
-    B:"Display Warning Text"=true
+    B:"Display Warning Text"=false
 
     # Toggles whether or not Dynamic Light pauses the timer, rather than adding to the light level. Pausing is what the old behavior did.
     B:"Dynamic Light Pauses Timer"=false
@@ -41,7 +41,7 @@ general {
     B:"Grues Spawn At Players"=false
 
     # Maximum light level at which the Grue can spawn [range: 0 ~ 15, default: 1]
-    I:"Maximum Spawn Light Level"=1
+    I:"Maximum Spawn Light Level"=15
 
     # Minimum light level at which the Grue can spawn. [range: 0 ~ 15, default: 0]
     I:"Minimum Spawn Light Level"=0
@@ -73,14 +73,13 @@ general {
     # Add dimension IDs to this list if you want Grues to spawn here.
     # §c[Only used if Grue dimension whitelist is enabled]§r
     I:Whitelist <
-        10
      >
 
     # Sets the amount of damage (in half-hearts) the Grue deals when Wimp Mode is enabled. [range: 2.0 ~ 100.0, default: 6.0]
-    S:"Wimp Mode Damage"=6.0
+    S:"Wimp Mode Damage"=20
 
     # Toggles wimp-mode, which reduces the Grue's damage output to 3 hearts (a 6.505213034913026604750013415713e-19th of the default).
-    B:"Wimp mode"=false
+    B:"Wimp mode"=true
 }
 
 
