Extra checks, decrease default time to 30 min, config time is up effects

--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -24,7 +24,7 @@ configs {
     I:"Default amount recovered"=1
 
     # Default duration when the player comes for the first time in this dimension. [default:12000 = 10 minutes] [range: 0 ~ 2147483647, default: 12000]
-    I:"Default duration"=72000
+    I:"Default duration"=36000
 
     # Default max duration that can be accumulated for a dimension. [default:72000 = 1 hour] [range: 0 ~ 2147483647, default: 72000]
     I:"Default max duration"=72000
@@ -79,7 +79,6 @@ effects {
 
     # Sets effects for dangerous phase. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;1;true]]
     S:"dangerous effects" <
-        minecraft:slowness;120;1;true
      >
 
     # Cooldown before applying effects. [80 ticks by default] [range: 1 ~ 2147483647, default: 80]
@@ -87,19 +86,15 @@ effects {
 
     # Sets effects for emergency phase. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;1;true], [minecraft:mining_fatigue;120;0;true], [minecraft:poison;120;0;true], [minecraft:hunger;120;0;true]]
     S:"emergency effects" <
-        minecraft:slowness;120;1;true
-        minecraft:mining_fatigue;120;0;true
-        minecraft:poison;120;0;true
-        minecraft:hunger;120;0;true
+        timeisup:doom_effect;300;0;true
      >
 
     # Sets effects for when the time is up. format : effectId;duration;amplifier;show_icon [default: [minecraft:slowness;120;3;true], [minecraft:mining_fatigue;120;1;true], [minecraft:poison;120;2;true], [minecraft:hunger;120;1;true]]
     S:"time is up effects" <
-        minecraft:slowness;120;3;true
-        minecraft:mining_fatigue;120;1;true
-        minecraft:poison;120;2;true
-        minecraft:hunger;120;1;true
-        timeisup:doom;999;10;true
+        minecraft:mining_fatigue;999;3;true
+        minecraft:poison;999;1;true
+        minecraft:blindness;999;1;true
+        timeisup:doom_effect;999;3;true
      >
 }
 
