--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -11,6 +11,11 @@
 advanced {
     # List of ingredients that should not be displayed in the list. Format: modId[:name[:meta]]. Hide Ingredients Mode will automatically add or remove entries here. [Default: []]
     S:itemBlacklist <
+        nethercraft:imp_helmet
+        nethercraft:imp_chestplate
+        nethercraft:imp_leggings
+        nethercraft:imp_boots
+        nethercraft:imp_skin
      >
 }
 
