--- a/config/multimob/multimob_spawns.cfg
+++ b/config/multimob/multimob_spawns.cfg
@@ -851,10 +851,10 @@ spawnallowed {
     B:_GroveSprite=true
     B:_Harpy=true
     B:_HauntedTool=true
-    B:_LilyLurker=true
+    B:_LilyLurker=false
     B:_LostMiner=true
     B:_RocketCreeper=true
-    B:_Sheepman=true
+    B:_Sheepman=false
     B:_SkeletonWarrior=true
     B:_SpiderFamily=true
     B:_SupportCreeper=true
@@ -1713,10 +1713,10 @@ spawnweights {
     I:_GroveSprite=100
     I:_Harpy=100
     I:_HauntedTool=70
-    I:_LilyLurker=100
+    I:_LilyLurker=0
     I:_LostMiner=4
     I:_RocketCreeper=50
-    I:_Sheepman=40
+    I:_Sheepman=0
     I:_SkeletonWarrior=100
     I:_SpiderFamily=40
     I:_SupportCreeper=30
