Disable erebus unused ore

--- a/config/erebus.cfg
+++ b/config/erebus.cfg
@@ -43,7 +43,7 @@ general {
 
 
 ores {
-    B:"Generate aluminium"=true
+    B:"Generate aluminium"=false
     B:"Generate coal"=true
     B:"Generate copper"=true
     B:"Generate diamond"=false
@@ -60,7 +60,7 @@ ores {
     B:"Generate quartz"=true
     B:"Generate silver"=false
     B:"Generate temple"=true
-    B:"Generate tin"=true
+    B:"Generate tin"=false
 }
 
 
