Remove difficult meter, config blights and heart containers

--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -27,7 +27,7 @@ main {
         S:"Difficulty Per Blight Kill"=0.0
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
-        S:"Difficulty Per Block"=0.0024999999441206455
+        S:"Difficulty Per Block"=0.0
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Boss Kill"=0.0
@@ -55,19 +55,19 @@ main {
          >
 
         # Adds extra difficulty per additional nearby player. So area difficulty will be multiplied by: 1 + group_bonus * (players_in_area - 1) [range: -10.0 ~ 10.0, default: 0.05000000074505806]
-        S:"Group Area Bonus"=0.05000000074505806
+        S:"Group Area Bonus"=0.0
 
         # Difficulty added per second is multiplied by this if the player is not moving. [range: -100.0 ~ 100.0, default: 0.699999988079071]
-        S:"Idle Multiplier"=0.699999988079071
+        S:"Idle Multiplier"=0.0
 
         # The amount difficulty changes each second. In Difficult Life, the option was named per tick, but was actually applied each second. Negative numbers will decrease difficulty over time. [range: -10000.0 ~ 10000.0, default: 0.0011573999654501677]
-        S:"Increase Per Second"=0.0011573999654501677
+        S:"Increase Per Second"=0.0
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Lost On Death"=0.0
 
         # The maximum difficulty level that can be reached. [range: 0.0 ~ 3.4028234663852886E38, default: 250.0]
-        S:"Max Value"=250.0
+        S:"Max Value"=0
 
         # The minimum difficulty value. This can be different from the starting value. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
         S:"Min Value"=0.0
@@ -126,7 +126,7 @@ main {
         B:"Custom Heart Rendering"=false
 
         # The time (in ticks) to show the difficulty meter whenever it pops up. [range: 0 ~ 2147483647, default: 160]
-        I:"Difficulty Meter Display Time"=160
+        I:"Difficulty Meter Display Time"=0
 
         # Determines the color of the text next to your hearts. GREEN_TO_RED displays green at full health, and moves to red as you lose health (does not work with absorption). WHITE will just be good old fashioned white text. Set to PSYCHEDELIC if you want to taste the rainbow. SOLID is a fixed color
         # Valid values: [GREEN_TO_RED, WHITE, PSYCHEDELIC, SOLID] [default: GREEN_TO_RED]
@@ -156,10 +156,10 @@ main {
         I:"Position Y"=-30
 
         # Show the difficulty meter. Usually, it is display for a few seconds occasionally. If false, it is never shown.
-        B:"Render Difficulty Meter"=true
+        B:"Render Difficulty Meter"=false
 
         # Render the difficulty meter at all times. If false, it displays occasionally.
-        B:"Render Difficulty Meter Always"=true
+        B:"Render Difficulty Meter Always"=false
 
         # If true, replaces the vanilla hearts with Scaling Health's hearts. Otherwise, regular vanilla hearts are rendered first, then custom hearts are used for extra health.
         B:"Replace Vanilla Heart Row With Custom"=false
@@ -180,7 +180,7 @@ main {
         I:"Text Offset Y"=0
 
         # If difficulty is set to change when the player sleeps, they will be warned when they get in bed.
-        B:"Warn When Sleeping"=true
+        B:"Warn When Sleeping"=false
 
         # If not empty, this replaces the default 'warn when sleeping' message. Leaving this empty will pull the usual message from the lang file. [default: ]
         S:"Warn When Sleeping - Message"=
@@ -212,16 +212,16 @@ main {
         I:"Heart XP Level Cost"=3
 
         # The maximum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 2]
-        I:"Hearts Dropped by Blight Max"=2
+        I:"Hearts Dropped by Blight Max"=1
 
         # The minimum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 0]
-        I:"Hearts Dropped by Blight Min"=0
+        I:"Hearts Dropped by Blight Min"=1
 
         # The maximum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 6]
-        I:"Hearts Dropped by Boss Max"=6
+        I:"Hearts Dropped by Boss Max"=2
 
         # The minimum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 3]
-        I:"Hearts Dropped by Boss Min"=3
+        I:"Hearts Dropped by Boss Min"=2
 
         # The amount of extra health restored when using a heart container. This applies whether or not hearts increase max health. [range: 0 ~ 2147483647, default: 4]
         I:"Hearts Health Restored"=4
@@ -253,13 +253,13 @@ main {
         S:"Max Damage Bonus"=10.0
 
         # The chance that an extra potion effect will be applied to any hostile mob. Note that this effect requires the mob to have a certain amount of "difficulty" left after it has been given extra health and damage. So entering 1 won't guarantee potion effects. [range: 0.0 ~ 1.0, default: 0.375]
-        S:"Potion Chance (Hostiles)"=0.375
+        S:"Potion Chance (Hostiles)"=0
 
         # The chance that an extra potion effect will be applied to any passive mob. Note that this effect requires the mob to have a certain amount of "difficulty" left after it has been given extra health and damage. So entering 1 won't guarantee potion effects. [range: 0.0 ~ 1.0, default: 0.02500000037252903]
-        S:"Potion Chance (Passives)"=0.02500000037252903
+        S:"Potion Chance (Passives)"=0
 
         # Additional XP (as percentage) per point of difficulty. For example, if this is 0.01, a mob will drop 2x (+1.0x) XP at 100 difficulty and 3x (+2.0x) at 200 [range: 0.0 ~ 1.0, default: 0.009999999776482582]
-        S:"XP Boost"=0.009999999776482582
+        S:"XP Boost"=0
 
         blights {
             # If true, every mob that can be a blight will be one 100% of the time.
@@ -295,7 +295,7 @@ main {
             B:"Blacklist All Passives"=true
 
             # Determines the chance of a mob spawning as a blight. Formula is "blightChanceMulti * currentDifficulty / maxDifficulty". Setting to 0 will disable blights. Setting to 1 will guarantee blights at max difficulty. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0625]
-            S:"Blight Chance Multiplier"=0.0625
+            S:"Blight Chance Multiplier"=0.01
 
             # When an entity spawns as a blight, their calculated difficulty is multiplied by this. Higher numbers mean more health and damage! [range: 1.0 ~ 3.4028234663852886E38, default: 3.0]
             S:"Blight Difficulty Multiplier"=3.0
@@ -307,7 +307,7 @@ main {
             B:"Fire Rides Blights"=false
 
             # If true, blights will have a fixed chance of spawning, regardless of difficulty. Set the chance in "Blight Chance Multiplier".
-            B:"Fixed Chance"=false
+            B:"Fixed Chance"=true
 
             # If true, blights will not take suffocation (inside a block) damage
             B:"Immune To Suffocation"=true
