Nerf blazing juggernaught damage

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -57,6 +57,7 @@ attributes {
         primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10
         primitivemobs:flame_spewer;generic.maxHealth;0;-15
         nethercraft:camouflage_spider;generic.maxHealth;0;-20
+        primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
      >
 }
 
