--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ mods/Sound-Physics-1.12.2-1.0.10.jar
 concheckrmd
 .gamelaunched
 servers.dat
+/resourcepacks/Green Screen Custom Sky UNIVERSAL/
+mods/Green Screens 2.0.jar
