Disable trollagers, spider family. Festive creepers in nether only

--- a/config/primitivemobs/primitivemobs.cfg
+++ b/config/primitivemobs/primitivemobs.cfg
@@ -62,7 +62,7 @@
     B:"Enable Skeleton Warrior"=true
 
     # Enable/Disable the Spider Family
-    B:"Enable Spider Family"=true
+    B:"Enable Spider Family"=false
 
     # Enable/Disable the Support Creeper
     B:"Enable Support Creeper"=true
@@ -74,7 +74,7 @@
     B:"Enable Treasure Slime"=true
 
     # Enable/Disable the Troll
-    B:"Enable Troll"=true
+    B:"Enable Troll"=false
 
     # Enable/Disable the Void Eye
     B:"Enable Void Eye"=true
